// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshots with imageUrl prop 1`] = `
<div
  className="Avatar"
  style={
    Object {
      "backgroundImage": "url(http://image.jpg)",
    }
  }
/>
`;

exports[`Avatar snapshots with no props 1`] = `
<div
  className="Avatar"
  style={
    Object {
      "backgroundImage": "url(default_image)",
    }
  }
/>
`;
